stopped attempting fixing horizontal scrolling

--- a/src/Sass/styles.sass
+++ b/src/Sass/styles.sass
@@ -109,11 +109,15 @@ ion-icon
         width: 20%
         height: 100%
         display: inline-block
-        // border-radius: 15px
-        border-radius: 100%
+        border-radius: 27px
         background: #F3F3F3
         float: left
 
+    .cardSpacer
+        width: 35px
+        height: 100%
+        // background: red
+        float: left
 
 
 
